Fix the issue of usb headphone is not active when plugged in after rebooting.

Bug: 767245
Change-Id: I059d4e783510b9dd3b5db5e8cfd7312e9cd43146
Reviewed-on: https://chromium-review.googlesource.com/679934
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Jenny Zhang <jennyz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504429}
Former-commit-id: 7e77e3684bd82c839a97544ea1aab897c1cfc74e